* Client: Added BIP100 stats to the mining UI
* Wallet: Added support for Type-4 wallet, which is based on BIP-32 keys derivation (HD wallets)
* Lib: Some changes to btc.WalletHD API
* WebUI: Real time UI refresh (without reloading the pages)
* Client/WebUI: Fixed double bug that occurred when switching "Listening for incoming TCP connections" on/off

1.2.0 - 2015-07-31
* Lib: enforce blocks version 3, starting from #364000
* WebUI: LoadTx shows only own transactions
* WebUI: Fixed transaction upload form at the Home tab
* WebUI: Transactions tab has an option to only show "own" transactions
* WebUI: Miners tab shows fee statistics
* Fix: peers DB getting empty after disconnecting the network (keep at least 256 records)
* Fix: BlockChain.BlockIndexAccess wasn't being unlocked when a panic from FindPathTo() was handled
* Lib: reject old version blocks based on the super-majority principles
* Lib: implemented BIT-0066

1.1.0 - 2015-06-12
* Client: configuring "Walletdir" to allow improved privacy of the wallets
* Downloader: look for "Datadir" in "gocoin.conf" or "../client/gocoin.conf"
* Client: the Blocks page of WebUI shows version of the recent blocks
* Fix for issue #12 (Snappy URL changed)

1.0.3 - 2015-03-27
* Fix: GetHeaders for orphaned block does not cause panic anymore
* Fix: Github issue #11 (panic when first time run client)

1.0.2 - 2015-01-02
* Fix: GetHeaders for unknown block does not cause panic anymore
* Fix: Index out of range in "client/usif/webui/wallets.go" seen when quickly switching wallets
* Baning of incomming peers ignores the remote port number (only checks IP)
* WebUI: show last block number in the top level menu

1.0.1 - 2014-10-19
* Parallel processing switched back on (was accidentally disabled in "lib/others/sys/const.go")

1.0.0 - 2014-08-07
* Updated script/transaction test cases with the most recent files from bitcoin core
* Mining pool tags are now in miners.json - can be changed without restarting the node