@@ -136,6 +136,14 @@ func (sig *Signature) Sign(seckey, message, nonce *Number, recid *int) int {
 			*recid ^= 1
 		}
 	}
+
+	if FORCE_LOW_S && sig.S.Cmp(&TheCurve.half_order.Int)==1 {
+		sig.S.Sub(&TheCurve.Order.Int, &sig.S.Int)
+		if recid!=nil {
+			*recid ^= 1
+		}
+	}
+
 	return 1
 }
 
